# mcp-system

./: .env.example  .env.prod  .flake8  .gitignore  .mcp-server-config.json  .mcp-sync-config.json  .mcp-version-keeper.json  .nvimrc  .projectile  0824plans.md  AUTOFIX_ACTION_PLAN_VERBOSE.md  AUTOFIX_IMPROVEMENT_PLAN.md  AUTOFIX_L2_THEN_TRANSMUTATION_PLAN.md  AUTOFIX_LEVEL2_IMPLEMENTATION_PLAN.md  AUTOFIX_SAFETY_ASSESSMENT_VERBOSE.md  AUTOFIX_TRANSMUTATION_PROTOCOL.md  AnthropicMCPdocs.md  CI_CD_PLAN.md  CLAUDE.md  CLAUDE_CURRENT_STATE.md  COMPREHENSIVE_AUTOFIX_ENHANCEMENT_PLAN.md  COMPREHENSIVE_LINT_REPORT.md  COPILOT_FIX_PLAN.md  DEPLOYMENT_SUMMARY.md  DOCKER_DEPLOYMENT.md  DOCKER_FEATURES.md  Dockerfile  Dockerfile.production  ENHANCED_AUTOFIX_ANALYSIS.md  ENHANCED_AUTOFIX_PIPELINE_PLAN.md  ENHANCED_MCP_CRAFTER_README.md  ENHANCED_PIPELINE_MCP_SUCCESS_REPORT.md  FINAL_RELEASE_PREPARATION.md  FINAL_STATUS_REPORT.md  Gemini phase 2 polish plan.md  HIGH_RES_CRAFTER_SUMMARY.md  LICENSE  MASSIVE_PIPELINE_IMPROVEMENTS.md  MCP_TRANSMUTATION_ARCHITECTURE_VERBOSE.md  PIPELINE_CURRENT_STATUS.md  (+100 more)
.autofix_backups/: demo_enhanced_orchestrator.py.backup.1756434761  docker-health-check.py.backup.1756464484  install-mcp-system.py.backup.1756434761  rapid_fix.py.backup.1756434761  simple_quality_patcher.py.backup.1756464484  simple_version_keeper.py.backup.1756434761  version_manager.py.backup.1756434761
.github/: copilot-instructions.md
.pipeline-security/: auth.hash  file-hashes.txt
autofix-reports/: autofix-summary-20250828_212636.txt  autofix-summary-20250829_054141.txt  autofix-summary-20250829_182227.txt  bandit-report-20250828_212636.json  bandit-report-20250829_054141.json  bandit-report-20250829_115529.json  bandit-report-20250829_115551.json  bandit-report-20250829_134428.json  manual-security-report-20250829_193421.json  manual-security-report-20250829_225555.json  manual-security-report-20250830_031321.json  manual-security-report-20250830_031350.json
configs/: .claude-fixes.json  .claude.json  .mcp-pipeline-state.json  .mcp-servers.json  .mcp-sync-config.json  .mcp-sync-config_1.json  .package-lock.json  bandit-report.json  claude_desktop_config.json  config  pipeline-state.backup_1755695174.json  pipeline-state.json  prevention_rules.json  release-report-1.0.1.json  settings.json  settings.local.json  settings.local_1.json  settings_1.json
core/: auto-discovery-system.py  claude-code-mcp-bridge.py  mcp-create-server.py  mcp-manager.py  mcp-mem0-client.py  mcp-mem0-simple.py  mcp-router.py  mcp-test-framework.py  mcp-upgrader.py
demo-enhanced-workspace/: checkpoint_watchdog_enhanced_resume_mcp_demo_20250826_225356.json
demo-mcp-tools/enhanced_resume_mcp_demo/: .env.example  README.md  analytics.py  export.py  main.py  processing.py  pyproject.toml
demo-mcp-tools/enhanced_resume_mcp_demo/analytics/: __init__.py
demo-mcp-tools/enhanced_resume_mcp_demo/processing/: __init__.py
demo-mcp-tools/enhanced_resume_mcp_demo/src/: main.py
demo-mcp-tools/enhanced_resume_mcp_demo/tests/: test_server.py
demo_resume_server/: export.py  ingestion.py  main.py  processing.py
docker/: dev-entrypoint.sh  prod-entrypoint.sh
docs/: .claude-instructions.md  API-Reference.md  CHANGELOG.md  CLAUDE_PIPELINE_INTEGRATION.md  CLAUDE_STREAMLINED_USAGE.md  CLI-BEST-PRACTICES-IMPLEMENTATION.md  CODEMAP-README.md  COMPREHENSIVE-AUTOFIX-MASTERY-PLAN.md  CONTRIBUTING.md  Claude-Quality-Patcher-Guide.md  DEPLOYMENT.md  ENHANCED_PIPELINE_INTEGRATION.md  Enhanced-Fix-Counting.md  Enhanced-MCP-Crafter-Documentation.md  Enhanced-Pipeline-Integration.md  INSTALLATION.md  MCP-Claude-Pipeline-Guide.md  MCP-Complete-Documentation_1.md  MCP-Quick-Start-Guide.md  MCP-System-Installation-Complete_1.md  MCP-System-Package-README.md  MCP-Upgrader-Documentation.md  ORGANIZATION.md  PIPELINE_PROTECTION_SUMMARY.md  PIPELINE_RUN_ORDER.md  PIPELINE_SECURITY_GUIDE.md  PRODUCTION_DEPLOYMENT_GUIDE.md  README-send-to-claude.md  README.md  SELF-HEALING-AUTOFIX-ARCHITECTURE.md  SEMANTIC_CATALOG_TOOL.md  SYNTAX-ERROR-AUTOPILOT-ADDON.md  autofix.md  current_command_7.md  docs.md  enhanced-autofix-v3.md  final_report_20250815_134139.md  final_report_20250815_135122.md  final_report_20250815_135258.md  final_report_20250815_135321.md  (+12 more)
guardrails/: __init__.py
installers/: install-mcp-system.py
mcp-tools/final-demo/: .env.example  docker-compose.yml  pyproject.toml
mcp-tools/final-demo/src/: main.py
mcp-tools/final-demo/tests/: test_server.py
mcp-tools/orchestrator/: .env.example  CLAUDE_INTEGRATION.md  Dockerfile  README.md  demo.py  demo_enhanced.py  docker-compose.yml  pyproject.toml  requirements.txt
mcp-tools/orchestrator/orchestrator/: __init__.py  main.py
mcp-tools/orchestrator/tests/: test_server.py
mcp-tools/test-tool2/: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
mcp-tools/test-tool2/src/: main.py
mcp-tools/test-tool2/tests/: test_server.py
mcp-workspace/resume_mcp_server/: README.md  pyproject.toml
mcp-workspace/resume_mcp_server/src/: main.py
mcp_tools/: __init__.py
pipeline-sessions/: direct-instructions-environment_detection.md  direct-pipeline-state.json  enhanced-pipeline-state.json  final-report-b44c20d2-11c4-40b1-9008-bc37f4e807fa.json  final-report-b6074665-5b94-4218-9df3-0b0f5fe68145.json  observations.jsonl  orchestrator-state-b44c20d2-11c4-40b1-9008-bc37f4e807fa.json  orchestrator-state-b6074665-5b94-4218-9df3-0b0f5fe68145.json  react-instructions-environment_detection.md  react-instructions-initialization.md  task-queue.json
scripts/: autofix.py  backup.sh  claude_agent_protocol.py  claude_code_integration_loop.py  claude_oversight_loop.py  claude_quality_patcher.py  create_release.sh  docker-health-check.py  docker-health-check.sh  enhanced_autofix_control.py  enhanced_autofix_engine.py  fix_hardcoded_paths.py  mcp_tools_monitor.py  migrate_to_mcp_tools.py  setup-database-url.sh  setup-secrets.sh  setup_dev.sh  simple_autofixer.py  simple_quality_patcher.py  simple_version_keeper.py  test_installation.py  validate-connections.sh  (+5 more)
src/: mcp  (+27 more)
(+191 files in other folders)
